# Trino

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLANO_ENGINE_TRINO.md  PLANO_EXECUCAO_TRINO.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/add-asset/: SKILL.md
.claude/skills/build-3ds/: SKILL.md
.claude/skills/build-n64/: SKILL.md
.claude/skills/run-emulator/: SKILL.md
.claude/skills/test-all/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/3ds/: Cargo.toml
apps/3ds/src/: main.rs
apps/n64/: Cargo.toml
apps/n64/src/: lib.rs
apps/pc/: Cargo.toml
apps/pc/src/: main.rs
assets/: manifest.toml
assets/shared/models/: cube.glb
assets/shared/models/castle64/: block_brick.glb  block_castle.glb  block_grass.glb  block_lava.glb  block_roof.glb  block_stone.glb  boar.glb  coin.glb  door_frame.glb  player_arm.glb  player_leg.glb  player_torso.glb  shadow.glb  star.glb
crates/asset-pipeline/: Cargo.toml
crates/asset-pipeline/src/: bake.rs  lib.rs  loader.rs  manifest.rs  model.rs  resolve.rs  watch.rs
crates/asset-pipeline/tests/: pipeline.rs
crates/core/: Cargo.toml
crates/core/src/: asset.rs  audio.rs  caps.rs  collide.rs  game.rs  input.rs  lib.rs  math.rs  math3d.rs  platform.rs  render.rs  render3d.rs  tilemap.rs
crates/editor/: Cargo.toml
crates/editor/src/: level_editor.rs  main.rs  viewport.rs
crates/game-api/: Cargo.toml
crates/game-api/src/: lib.rs
crates/platform-3ds/: Cargo.toml
crates/platform-3ds/shim/: trino_shim_3ds.c
crates/platform-3ds/src/: assets.rs  audio.rs  ffi.rs  input.rs  lib.rs  renderer.rs  runtime.rs
crates/platform-n64/: Cargo.toml
crates/platform-n64/shim/: trino_shim.c
crates/platform-n64/src/: assets.rs  audio.rs  ffi.rs  input.rs  lib.rs  renderer.rs  runtime.rs
crates/platform-pc/: Cargo.toml
crates/platform-pc/src/: audio.rs  input.rs  lib.rs  sim.rs
crates/platform-pc/src/renderer/: batch.rs  mod.rs  shaders.wgsl
crates/platform-pc/tests/: golden.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
docker/n64/: Dockerfile
docs/adr/: 0001-defer-transform-gizmo.md  0002-n64-abi-o32-staticlib.md  0003-software-tnl-3d.md
examples/castle64/: AGENTS.md  Cargo.toml
examples/castle64/src/: bot.rs  levels.rs  lib.rs  physics.rs
examples/hello-sprite/: Cargo.toml
examples/hello-sprite/src/: lib.rs
examples/platformer/: Cargo.toml
examples/platformer/src/: level1.txt  lib.rs
scenes/: main.scene.ron
templates/new-game/: AGENTS.md  Cargo.toml
templates/new-game/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: castle64_assets.rs  main.rs  n3ds.rs  n64.rs
xtask/tests/: c64_gif.rs  c64_shots.rs  dep_graph.rs  hero_shot.rs  hot_reload.rs  record_gif.rs
