[workspace]
resolver = "2"
members = ["crates/*", "apps/*", "examples/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OWNER/trino"
rust-version = "1.93"

[workspace.dependencies]
trino-core = { path = "crates/core" }
trino-game-api = { path = "crates/game-api" }
trino-platform-pc = { path = "crates/platform-pc" }
trino-asset-pipeline = { path = "crates/asset-pipeline" }
trino-scene = { path = "crates/scene" }
hello-sprite = { path = "examples/hello-sprite" }
winit = "0.30"
# wgpu 29 = what egui-wgpu 0.35 (the editor UI, Fase 3) resolves to. Keep in
# lockstep with the egui upgrade cadence, never bump one without the other.
wgpu = "29"
cpal = "0.18"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
png = "0.18"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
hound = "3"
notify = "8"
notify-debouncer-full = "0.6"
hot-lib-reloader = "0.8.2"
libloading = "0.9"
tempfile = "3"
ron = "0.12"
# Editor UI. egui-wgpu 0.35 <-> wgpu 29: bump only in lockstep.
eframe = { version = "0.35", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "x11",
    "wayland",
] }
egui_dock = "0.20"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
