[package]
name = "xtask"
description = "Build orchestrator: cargo xtask <command> <platform>. The only entry point contributors and CI need."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]

[dev-dependencies]
serde_json = { workspace = true }
