[package]
name = "xtask"
description = "Build orchestrator: cargo xtask <command> <platform>. The only entry point contributors and CI need."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
trino-core = { workspace = true }
trino-asset-pipeline = { workspace = true, features = ["watch"] }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
png = { workspace = true }
hound = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
libloading = { workspace = true }
tempfile = { workspace = true }
trino-core = { workspace = true }
trino-game-api = { workspace = true }
hello-sprite = { workspace = true }
