[package]
name = "trino-app-pc"
description = "PC glue binary: winit window + platform-pc backend + the game."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "trino-pc"
path = "src/main.rs"

[features]
default = []
# Live reload: game code hot-swaps as a dylib, assets rebake+reupload on
# save. Dev-only; console/release builds link everything statically.
reload = ["dep:hot-lib-reloader", "trino-asset-pipeline/watch"]

[dependencies]
trino-core = { workspace = true }
trino-game-api = { workspace = true }
trino-platform-pc = { workspace = true }
trino-asset-pipeline = { workspace = true }
platformer = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
hot-lib-reloader = { workspace = true, optional = true }
