[package]
name = "{{name}}"
description = "A Trino game. Runs on PC, Nintendo 64 and Nintendo 3DS."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# rlib = static link (consoles, release); dylib = hot reload on PC dev.
[lib]
crate-type = ["rlib", "dylib"]

# Game crates may depend only on trino-core / trino-game-api
# (enforced by xtask/tests/dep_graph.rs).
[dependencies]
trino-core = { workspace = true }
trino-game-api = { workspace = true }
